Updated to use Axios

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,7 +18,7 @@
         <div class="instruction-title">Step 3: Use the network</div>
         <div class="instruction-text">Your browser will return you to our site to grant you access to the network.</div>
     </div>
-    {{> quid}}
+    {{!-- {{> quid}} --}}
     <div class="payment-options-list">
         <div class="payment-option">
             <div class="payment-option-description">10 minutes of Wifi Access</div>
