--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -4,6 +4,7 @@
 <head>
   <title>{{title}}</title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
   <script src="/javascripts/client.js"></script>
 </head>
